add get job detail api call
