# api/openapi.yaml
@@ -71,6 +71,34 @@ paths:
         '500':
           $ref: '#/components/responses/GenericError'
 
+  /api/job/detail:
+    # JobDetail api-path GET /api/job/detail
+    get:
+      summary: JobDetail
+      description: get job detail
+      operationId: JobDetail
+      tags:
+        - job
+      parameters:
+        - in: query
+          name: jid
+          description: job id
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/JobDetailResponse'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '403':
+          $ref: '#/components/responses/AuthenticationError'
+        '500':
+          $ref: '#/components/responses/GenericError'
+
   /api/job/run:
 
     #RunJob api-path POST /api/job
@@ -234,6 +262,25 @@ components:
           format: int32
           description: last run exit code
 
+    JobDetail:
+      type: object
+      properties:
+        jid:
+          description: job id
+          type: string
+          maxLength: 63
+        latest_runid:
+          description: run id
+          type: string
+        step_count:
+          type: integer
+          format: int32
+          description: number of steps
+        exitcode:
+          type: integer
+          format: int32
+          description: last run exit code
+
 
     # ---- ListJob -------
 
@@ -291,3 +338,14 @@ components:
         message:
           type: string
           description: job status
+
+    # ---- JobDetail -------
+
+    JobDetailResponse:
+      type: object
+      properties:
+        jobs:
+          type: array
+          description: bucket name
+          items:
+            $ref: '#/components/schemas/JobDetail'
